# coinbene-connector

./: .gitmodules  LICENSE  README.md  coinbene-connector.cabal  stack.yaml
doc/: connector-architecture.md
src/Coinbene/: Adapter.hs  Connector.hs  Executor.hs  Producer.hs
test/: Test.hs
